Fixed overlapping footer

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   height: 100vh;
@@ -5,13 +11,17 @@ body {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .topnav {
-  overflow: hidden;
   background-color: #333;
   display: flex;
   width: 100vw;
+  margin: 0 0 50px 0;
 }
 .topnav a {
   float: left;
@@ -28,6 +38,10 @@ body {
 .topnav a.active {
   background-color: #696969;
   color: white;
+}
+
+main {
+  margin: 0 0 50px 0;
 }
 
 table {
@@ -52,25 +66,31 @@ tr:nth-child(even) {
   background-color: rgba(192,192,192,0.3);
   color: white;
   font-size: small;
-  box-sizing: border-box;
-  padding: 4px;
+  padding: 20px;
   letter-spacing: 1px;
-  width: 275px;
+  width: 295px;
   border: 1px solid lightcyan;
   border-radius: 6px;
 }
 
 footer {
+  margin: 50px 0 0 0;
+}
+
+footer div {
   display: flex;
   justify-content: center;
   align-items: center;
   color: #ddd;
   font-family: Arial, Helvetica, sans-serif;
-  position: absolute;
-  bottom: 0px;
-  width: 100vw;
+  padding: 25px;
+  /* margin: 60px 0 0 0; */
+  /* position: absolute;
+  bottom: 0; */
   background-color: rgba(0, 0, 0, 0.75);
+  width: 100%;
 }
+
 .underln:hover {
   text-decoration: underline;
   cursor: pointer;
